// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders image with default values and image url 1`] = `
Array [
  <picture>
    <img
      alt=""
      loading="lazy"
      role="img"
      src="/photo.png/@@images/image/listing"
      style={
        Object {
          "objectFit": "cover",
          "width": "100%",
        }
      }
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"/photo.png/@@images/image/listing\\"
                srcset=\\"/photo.png/@@images/image/large 768w, /photo.png/@@images/image/preview 400w, /photo.png/@@images/image/mini 200w, /photo.png/@@images/image/thumb 128w, /photo.png/@@images/image/tile 64w, /photo.png/@@images/image/icon 32w, /photo.png/@@images/image/listing 16w\\"
                alt=\\"\\"
                className=\\"undefined\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with external url 1`] = `
Array [
  <picture>
    <img
      alt="External picsum photo"
      loading="lazy"
      role="img"
      src="https://picsum.photos/200/300"
      style={
        Object {
          "objectFit": "cover",
          "width": "100%",
        }
      }
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"https://picsum.photos/200/300\\"
                undefined
                alt=\\"External picsum photo\\"
                className=\\"undefined\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object 1`] = `
Array [
  <picture>
    <img
      alt="Photo"
      className="photo-image"
      loading="lazy"
      role="presentation"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
      style={
        Object {
          "objectFit": "cover",
          "width": "100%",
        }
      }
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w, /test-images/@@images/image/preview 400w, /test-images/@@images/image/large 768w\\"
                alt=\\"Photo\\"
                className=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object and opt props 1`] = `
Array [
  <picture>
    <img
      alt="Photo"
      className="photo-image"
      loading="lazy"
      role="presentation"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
      style={
        Object {
          "objectFit": "cover",
          "width": "100%",
        }
      }
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w\\"
                alt=\\"Photo\\"
                className=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object and original 1`] = `
Array [
  <picture>
    <source
      srcSet="/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w, /test-images/@@images/image/preview 400w, /test-images/@@images/image/large 768w, /test-images/@@images/image 1920w"
    />
    <img
      alt="Photo"
      className="photo-image"
      loading="lazy"
      role="presentation"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
      style={
        Object {
          "objectFit": "cover",
          "width": "100%",
        }
      }
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w, /test-images/@@images/image/preview 400w, /test-images/@@images/image/large 768w, /test-images/@@images/image 1920w\\"
                alt=\\"Photo\\"
                className=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with props and image url 1`] = `
Array [
  <picture>
    <source
      srcSet="/photo.png/@@images/image/large 768w, /photo.png/@@images/image/preview 400w, /photo.png/@@images/image/mini 200w, /photo.png/@@images/image/thumb 128w, /photo.png/@@images/image/tile 64w, /photo.png/@@images/image/icon 32w, /photo.png/@@images/image/listing 16w"
    />
    <img
      alt="Photo"
      className="photo-image"
      loading="lazy"
      role="presentation"
      src="/photo.png/@@images/image/listing"
      style={
        Object {
          "objectFit": "cover",
          "width": "100%",
        }
      }
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"/photo.png/@@images/image/listing\\"
                srcset=\\"/photo.png/@@images/image/large 768w, /photo.png/@@images/image/preview 400w, /photo.png/@@images/image/mini 200w, /photo.png/@@images/image/thumb 128w, /photo.png/@@images/image/tile 64w, /photo.png/@@images/image/icon 32w, /photo.png/@@images/image/listing 16w\\"
                alt=\\"Photo\\"
                className=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;
